# ore-mint

./: Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
api/: Cargo.toml  idl.json
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: authority.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: init.rs  lib.rs  mint_ore.rs
