[workspace]
resolver = "2"
members = ["api", "cli", "program"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
description = "Solana native store of value."
documentation = "https://docs.rs/ore-api/latest/ore_api/"
repository = "https://github.com/regolith-labs/ore"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytemuck = "1.14.3"
num_enum = "0.7.2"
ore-mint-api = { path = "./api" }
serde = { version = "1.0", features = ["derive"] }
solana-program = "^2.1"
solana-client = "^2.1"
solana-sdk = "^2.1"
solana-security-txt = "1.1.2"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = [ "no-entrypoint" ] } 
steel = { features = ["spl"], version = "4.0.4" }
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true