[package]
name = "ore-mint-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ore_mint"

[features]
default = []

[dependencies]
ore-mint-api.workspace = true
solana-program.workspace = true
solana-security-txt.workspace = true
spl-token.workspace = true
steel.workspace = true

